# webTool

./: .dockerignore  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CODE_REVIEW_v1.6.15.md  README.md  SECURITY.md  _cfg_diff.txt  _sm_diff.txt  _utils_diff.txt  _verify_repro.py  config.example.yaml  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml
docker/: Dockerfile  README.md  docker-compose.yml
docker/searxng/: docker-compose.yml  settings.yml
downloads/: 2504.05521  goog-20241231.htm
output/: Python_web_scraping_2025.json  download_latest_google_annual_report.json  download_latest_google_anual_report.json  get_details_of_agilamlabs_com_details_youtube_link.json
sample_data/: mcp_config_example.json  sample_actions.json  sample_article.html
tests/: conftest.py  test_a11y_targeting.py  test_agent.py  test_audit.py  test_auth_persistence.py  test_binary_extraction.py  test_browser_actions.py  test_browser_url_safety.py  test_cache.py  test_captcha_resolver.py  test_challenge_detection.py  test_collection.py  test_content_extractor.py  test_correlation.py  test_crawl.py  test_deep_review_config.py  test_deep_review_entrypoints.py  test_deep_review_low.py  test_deep_review_misc.py  test_deep_review_models.py  test_exceptions.py  test_failure_transparency.py  test_h4_new_tab_redirect.py  test_injection_containment.py  test_lifecycle.py  test_locators.py  test_login_handoff.py  test_metrics.py  test_models.py  test_monitoring.py  test_pdf_extraction.py  test_politeness.py  test_prefer_domains.py  test_proxy_fingerprint.py  test_recipes.py  test_retry_policies.py  test_safety.py  test_search_extract_budget.py  test_search_providers.py  test_search_resilience.py  (+52 more)
web_agent/: __init__.py  __main__.py  agent.py  audit.py  browser_actions.py  browser_manager.py  cache.py  captcha.py  challenge.py  config.py  content_extractor.py  correlation.py  crawl.py  debug.py  doctor.py  domain_skills.py  downloader.py  exceptions.py  injection.py  main.py  mcp_server.py  metrics.py  models.py  monitoring.py  network_collector.py  ownership.py  rate_limiter.py  recipes.py  robots.py  search_engine.py  search_providers.py  session_manager.py  sitemap.py  structured.py  tab_manager.py  trace_recorder.py  utils.py  web_fetcher.py  workspace.py
web_agent/builtin_skills/: __init__.py
web_agent/builtin_skills/ec_europa_document_search/: __init__.py  skill.md
web_agent/builtin_skills/github_release_download/: __init__.py  skill.md
web_agent/builtin_skills/sec_gov_filing_search/: __init__.py  skill.md
web_agent/playwright_agentic_search.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
web_agent_toolkit.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
