[project]
name = "web-agent-toolkit"
dynamic = ["version"]
description = "Professional agentic web search, fetch, download, extraction, and browser automation toolkit using Playwright"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
keywords = ["web-scraping", "playwright", "ai-agent", "browser-automation", "content-extraction"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "playwright>=1.55.0,<2.0.0",
    "playwright-stealth>=2.0.0,<3.0.0",
    "pydantic>=2.9.0,<3.0.0",
    "pydantic-settings>=2.0.0",
    "loguru>=0.7.0",
    "trafilatura>=2.0.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "PyYAML>=6.0",
    "httpx>=0.28.0",
    "mcp[cli]>=1.0.0",
    "ddgs>=9.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
    "mypy>=1.10.0",
    "types-PyYAML>=6.0.0",
]
# Binary document extractors (PDF + XLSX + DOCX). Install with:
#   pip install "web-agent-toolkit[binary]"
# Required when calling Agent.search_and_extract(extract_files=True) or
# Agent.fetch_and_extract on PDF/XLSX/DOCX URLs (and the corresponding MCP
# tools with the same flags). Without this extra, the extractors return
# ExtractionResult(extraction_method="none") with a clear install hint
# rather than crashing. CSV is handled by the stdlib and needs no extra.
binary = [
    "pypdf>=4.0.0",        # PDF
    "openpyxl>=3.1.0",     # XLSX
    "python-docx>=1.1.0",  # DOCX
]

[tool.setuptools.packages.find]
include = ["web_agent*"]

[tool.setuptools.dynamic]
version = {attr = "web_agent.__version__"}

[project.scripts]
web-agent = "web_agent.main:main"
web-agent-mcp = "web_agent.mcp_server:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: tests requiring network access and a real browser",
]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["web_agent", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # bugbear
    "C4",   # comprehensions
    "SIM",  # simplify
    "RUF",  # ruff-specific
]
ignore = [
    "E501",   # line-too-long (let formatter decide)
    "B008",   # function call in default arg (Pydantic Field, FastAPI Depends)
    "SIM117", # nested with-statements (often clearer)
    "UP007",  # `Optional[X]` over `X | None` (deferred -- mixed style in codebase)
    "UP045",  # `Optional[X]` over `X | None` for params (same reason)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "N802",  # function name should be lowercase (test class methods)
    "N806",  # variable in function should be lowercase (test fixtures)
    "B017",  # assert raises Exception (fine in tests)
]
"web_agent/__init__.py" = [
    "RUF022",  # __all__ is grouped by section (Core / Config / Models...) on purpose
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
warn_unreachable = true
warn_redundant_casts = true
disallow_untyped_defs = true
check_untyped_defs = true
no_implicit_optional = true
ignore_missing_imports = true  # 3rd-party libs without stubs

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false   # test fns don't need annotations
check_untyped_defs = false

[tool.coverage.run]
source = ["web_agent"]
branch = true
omit = [
    "*/tests/*",
    "*/__main__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "@(abc\\.)?abstractmethod",
]
show_missing = true
precision = 1
skip_covered = false
